src/versions: rename file to libmagic
This is consistent with the database information.

While there, correct its output to match it too.

--- a/src/versions/project.conf
+++ b/src/versions/project.conf
@@ -1,4 +1,4 @@
-targets=acpi,awk,bc,bmake,bsddialog,bsnmp,byacc,bzip2,diff,dma,dtc,file,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,libexpat,liblzma,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
+targets=acpi,awk,bc,bmake,bsddialog,bsnmp,byacc,bzip2,diff,dma,dtc,flex,heimdal,ipfilter,kyua,ldns,less,libarchive,libc,libcbor,libdialog,libedit,libevent,libexpat,liblzma,libmagic,libpcap,libxo,llvm,lua,lyaml,mkuzip,ncurses,ntp,openpam,openssh,openssl,patch,pkg,sendmail,sqlite,tcpdump,tzdata,unbound,unifdef,wireguard,wpa_supplicant,zfs,zlib,zstd
 cflags=-W -Wall -g -O2 -fstack-protector
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.c
@@ -48,10 +48,6 @@ sources=dma.c
 [dtc]
 type=binary
 sources=dtc.c
-
-[file]
-type=binary
-sources=file.c
 
 [flex]
 type=binary
@@ -116,6 +112,10 @@ ldflags=-lbsdxml
 [liblzma]
 type=binary
 sources=liblzma.c
+
+[libmagic]
+type=binary
+sources=libmagic.c
 
 [libpcap]
 type=binary
@@ -249,9 +249,6 @@ depends=common.c
 [dtc.c]
 depends=common.c
 
-[file.c]
-depends=common.c
-
 [flex.c]
 depends=common.c
 
@@ -292,6 +289,9 @@ depends=common.c
 depends=common.c
 
 [liblzma.c]
+depends=common.c
+
+[libmagic.c]
 depends=common.c
 
 [libpcap.c]
