database.yml: Fix tcpdump depends to array from string
tcpdump depens was string and not array.
Convert to array. It makes sure that there is no
need for workarounds

--- a/database.yml
+++ b/database.yml
@@ -10080,7 +10080,8 @@ Sections:
       source: https://fossies.org/linux/misc/tcpdump-4.99.5.tar.gz
       security:
         - network
-      depends: libpcap
+      depends:
+        - libpcap
       plan: fix
       owner:
         - cy@
