database.yml: Added licenses and corrected some licenses that were wrong
Add liceses or 'license: NOASSERTION' to all database.yml entries.
Corrected some liceses to be same as scripts generates

--- a/database.yml
+++ b/database.yml
@@ -53,6 +53,7 @@ Sections:
       version: '20240109'
       upstream: invisible-island
       homepage: https://invisible-island.net/byacc/
+      license: NOASSERTION
       source: https://invisible-island.net/datafiles/release/byacc.tar.gz
       security:
         - build
@@ -98,6 +99,7 @@ Sections:
       upstream: Git
       version: unknown
       homepage: https://git-scm.com
+      license: GPL-2.0
       source: https://git.kernel.org/pub/scm/git/git.git
       security:
         - build
@@ -713,7 +715,7 @@ Sections:
       upstream: Tony Finch
       homepage: https://dotat.at/prog/unifdef
       source: https://dotat.at/cgi/git/unifdef.git/tree/3a5ba6f9ecaadef4f3a118b35d0c89233609161d
-      license: BSD-2-Clause AND BSD-3-Clause
+      license: BSD-3-Clause AND BSD-2-Clause
       security:
         - build
       plan: fork
@@ -11350,7 +11352,7 @@ Sections:
       version: 14.3
       upstream: FreeBSD
       homepage: https://www.FreeBSD.org
-      license: BSD-1-Clause AND BSD-2-Clause AND BSD-3-Clause
+      license: BSD-3-Clause AND BSD-2-Clause AND BSD-1-Clause
       source: https://cgit.freebsd.org/src/tree/lib/libc
     lyaml:
       description: LibYAML binding for Lua
@@ -11380,6 +11382,7 @@ Sections:
       version: '20250807'
       upstream: Intel
       homepage: https://github.com/acpica/acpica
+      license: NOASSERTION
       source: https://github.com/acpica/acpica/tree/20250807
       security:
         - build
@@ -11393,7 +11396,8 @@ Sections:
       version: 6.5
       upstream: Linux
       homepage: https://wireless.docs.kernel.org/en/latest/en/users/drivers/ath10k.html
-      licence: ISC
+      license: NOASSERTION
+      license: ISC
       source: https://git.kernel.org/pub/scm/linux/kernel/git/ath/ath.git/
       security:
         - kernel
@@ -11407,6 +11411,7 @@ Sections:
       version: 1.3.41.0
       upstream: Intel
       homepage: https://edc.intel.com/content/www/us/en/design/products/ethernet/adapters-and-devices-user-guide/dynamic-device-personalization-ddp/
+      license: NOASSERTION
       source: https://www.intel.com/content/www/us/en/download/19660/772040/intel-ethernet-800-series-dynamic-device-personalization-ddp-for-telecommunication-comms-package.html
       security:
         - kernel
@@ -11420,6 +11425,7 @@ Sections:
       version: 5.1.2
       upstream: Phil Dibowitz
       homepage: https://www.phildev.net/ipf/
+      license: NOASSERTION
       security:
         - kernel
         - network
@@ -11431,6 +11437,7 @@ Sections:
       upstream: OpenBSD
       version: unknown
       homepage: https://openbsd.org
+      license: NOASSERTION
       security:
         - kernel
         - network
@@ -11447,6 +11454,7 @@ Sections:
       upstream: OpenBSD
       version: unknown
       homepage: https://openbsd.org
+      license: NOASSERTION
       security:
         - kernel
         - network
@@ -11576,6 +11584,7 @@ Sections:
       version: 4.2.8p18
       upstream: NTP Project
       homepage: https://www.ntp.org
+      license: NOASSERTION
       source: https://downloads.nwtime.org/ntp/4.2.8/ntp-4.2.8p18.tar.gz
       security:
         - network
@@ -11744,6 +11753,7 @@ Sections:
       version: unknown
       upstream: Intel
       homepage: https://android.googlesource.com/platform/bionic
+      license: NOASSERTION
       security:
         - system
       plan: fix
@@ -11880,6 +11890,7 @@ Sections:
       version: unknown
       upstream: invisible-island
       homepage: https://invisible-island.net/dialog/
+      license: NOASSERTION
       security:
         - user
       plan: forego
@@ -11888,6 +11899,7 @@ Sections:
       upstream: Game of Trees
       version: unknown
       homepage: https://www.gameoftrees.org
+      license: NOASSERTION
       security:
         - build
         - user
@@ -12032,7 +12044,7 @@ Sections:
       version: 0.2.5
       upstream: LibYAML
       homepage: https://pyyaml.org/wiki/LibYAML
-      licence: MIT
+      license: MIT
       source: https://github.com/yaml/libyaml/tree/0.2.5
       plan: fix
       owner:
@@ -12043,6 +12055,7 @@ Sections:
       version: '2025-09-26'
       upstream: Ingo Schwarze
       homepage: https://mandoc.bsd.lv
+      license: BSD-3-Clause AND BSD-2-Clause AND 0BSD
       security:
         - build
         - user
@@ -12082,6 +12095,7 @@ Sections:
       version: 3.50.2
       upstream: SQLite
       homepage: https://sqlite.org/src
+      license: NOASSERTION
       source: https://github.com/sqlite/sqlite/tree/version-3.50.2
       security:
         - user
@@ -12110,6 +12124,7 @@ Sections:
       version: 2025b
       upstream: IANA
       homepage: https://www.iana.org/time-zones
+      license: NOASSERTION
       source: https://data.iana.org/time-zones/releases/tzdata2025b.tar.gz
       security:
         - system
@@ -12137,7 +12152,7 @@ Sections:
       directory: contrib/bc
       upstream: Gavin D. Howard
       homepage: https://gavinhoward.com/tag/bc/
-      license: BSD-2-clause
+      license: BSD-2-Clause
       source: https://github.com/gavinhoward/bc/tree/7.1.0
       security:
         - user
@@ -12174,6 +12189,7 @@ Sections:
       version: unknown
       upstream: Microsoft
       homepage: https://learn.microsoft.com/en-us/windows-server/virtualization/hyper-v/overview
+      license: NOASSERTION
       security:
         - system
       plan: fix
@@ -12212,9 +12228,10 @@ Sections:
     patch:
       directory: usr.bin/patch
       version: 2.0-12u11
-      upstream: GNU
+      upstream: GPL-3.0-or-later
       homepage: https://www.gnu.org/software/patch/
       source: https://git.savannah.gnu.org/git/patch.git
+      license: NOASSERTION
       security:
         - build
         - user
@@ -12243,7 +12260,7 @@ Sections:
       version: 0.22
       upstream: FreeBSD (GitHub)
       homepage: https://github.com/FreeBSD/atf
-      license: BSD-3-Clause and BSD-2-Clause
+      license: BSD-3-Clause AND BSD-2-Clause
       source: https://github.com/FreeBSD/atf
       security:
         - user
